--- a/project.json
+++ b/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 37.85570526123047,
         "position": {
-            "x": 5.644021511077881,
-            "y": 18.975719451904297,
-            "z": 0.15479139983654022
+            "x": 8.301726341247559,
+            "y": 30.65531349182129,
+            "z": 4.360586643218994
         },
         "projection": 0,
         "target": {
-            "x": -3.0833582878112793,
-            "y": 13.711599349975586,
-            "z": 0.5040662288665771
+            "x": 5.327392578125,
+            "y": 20.900798797607422,
+            "z": 4.312232971191406
         },
         "type": "camera",
         "up": {
@@ -23,8 +23,8 @@
         "ambientColor": {
             "w": 0.0,
             "x": 1.0,
-            "y": 1.0,
-            "z": 1.0
+            "y": 0.925239622592926,
+            "z": 0.7722007632255554
         },
         "bloom": false,
         "bloomBrightness": -0.3230000138282776,
@@ -229,9 +229,9 @@
         "name": "Player",
         "normal_texture_path": "",
         "position": {
-            "x": 23.900007247924805,
+            "x": 0.5000036358833313,
             "y": 17.80000114440918,
-            "z": 4.799998760223389
+            "z": 0.2999986410140991
         },
         "relative_position": {
             "x": 0.0,
@@ -325,11 +325,11 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 6,
+        "id": 1900683056,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
-        "name": "Light",
+        "name": "",
         "position": {
             "x": 7.099997520446777,
             "y": 9.50000286102295,
@@ -345,6 +345,43 @@
             "x": 0,
             "y": 0,
             "z": 0
+        },
+        "type": "light"
+    },
+    {
+        "attenuation": 9.999999747378752e-05,
+        "color": {
+            "a": 255.0,
+            "b": 0.0,
+            "g": 0.0,
+            "r": 255.0
+        },
+        "cutOff": 10.0,
+        "direction": {
+            "x": 0.4000000059604645,
+            "y": -0.4959999918937683,
+            "z": 1.0
+        },
+        "id": 1900683056,
+        "intensity": 0.5,
+        "isChild": false,
+        "light_type": 0,
+        "name": "",
+        "position": {
+            "x": 4.0,
+            "y": 7.900001525878906,
+            "z": -17.80000114440918
+        },
+        "relative_position": {
+            "x": 0,
+            "y": 0,
+            "z": 0
+        },
+        "specularStrength": 0.5,
+        "target": {
+            "x": -6.8392638108948e-27,
+            "y": 4.5914945482066956e-41,
+            "z": 2.7402994770440032e+31
         },
         "type": "light"
     }
