--- a/imgui.ini
+++ b/imgui.ini
@@ -24,13 +24,13 @@ DockId=0x00000004,0
 Pos=0,56
 Size=369,844
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000007,0
 
 [Window][Inspector Window]
 Pos=1460,56
 Size=440,844
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000006,0
 
 [Window][Scene Editor Window]
 Pos=371,56
@@ -75,12 +75,12 @@ Collapsed=0
 
 [Docking][Data]
 DockSpace         ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,56 Size=1900,844 Split=X
-  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=1458,844 Split=X
-    DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=369,844 Selected=0x2C630E19
-    DockNode      ID=0x00000006 Parent=0x00000007 SizeRef=1529,844 Split=Y
-      DockNode    ID=0x00000001 Parent=0x00000006 SizeRef=1900,437 CentralNode=1 Selected=0x44D9F559
-      DockNode    ID=0x00000002 Parent=0x00000006 SizeRef=1900,405 Split=X Selected=0xF2B1FC4A
+  DockNode        ID=0x00000007 Parent=0x8B93E3BD SizeRef=369,844 Selected=0x2C630E19
+  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=1529,844 Split=X
+    DockNode      ID=0x00000005 Parent=0x00000008 SizeRef=1458,844 Split=Y
+      DockNode    ID=0x00000001 Parent=0x00000005 SizeRef=1900,437 CentralNode=1 Selected=0x44D9F559
+      DockNode    ID=0x00000002 Parent=0x00000005 SizeRef=1900,405 Split=X Selected=0xF2B1FC4A
         DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=369,405 Selected=0x1FC0499E
         DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=1529,405 Selected=0xF2B1FC4A
-  DockNode        ID=0x00000008 Parent=0x8B93E3BD SizeRef=440,844 Selected=0xF58E28BB
+    DockNode      ID=0x00000006 Parent=0x00000008 SizeRef=440,844 Selected=0xF58E28BB
 
