--- a/exported_game/project.json
+++ b/exported_game/project.json
@@ -2,15 +2,15 @@
     {
         "fovy": 74.51786041259766,
         "position": {
-            "x": -18.9931583404541,
-            "y": 47.21593475341797,
-            "z": -12.357829093933105
+            "x": 15.854409217834473,
+            "y": 32.03662872314453,
+            "z": 18.8930721282959
         },
         "projection": 0,
         "target": {
-            "x": -10.686898231506348,
-            "y": 42.39494705200195,
-            "z": -8.928030014038086
+            "x": 7.44743537902832,
+            "y": 26.860118865966797,
+            "z": 16.338489532470703
         },
         "type": "camera",
         "up": {
@@ -1500,7 +1500,7 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 8096,
+        "id": -1547606448,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 1,
@@ -1537,7 +1537,7 @@
             "y": -0.4959999918937683,
             "z": 1.0
         },
-        "id": 8096,
+        "id": -1547606448,
         "intensity": 0.5,
         "isChild": false,
         "light_type": 0,
@@ -1561,7 +1561,7 @@
         "type": "light"
     },
     {
-        "attenuation": 9.999999747378752e-05,
+        "attenuation": 0.009999999776482582,
         "color": {
             "a": 255.0,
             "b": 255.0,
@@ -1574,8 +1574,8 @@
             "y": 0.4000000059604645,
             "z": -0.4000000059604645
         },
-        "id": 8096,
-        "intensity": 0.5,
+        "id": -1547606448,
+        "intensity": 1.0,
         "isChild": false,
         "light_type": 1,
         "name": "",
